fixed the layout issue on get involved page, changed the links in the footer to link to the correct special events html

--- a/styles/get-involved.css
+++ b/styles/get-involved.css
@@ -5,7 +5,10 @@
   display: block;
   margin-bottom: 3rem
 }
-
+.get-involved-container {
+  margin: 0 auto;
+  max-width: 70rem;
+}
 
 .get-involved-grid {
   display: grid;
